--- a/Exams/build.gradle
+++ b/Exams/build.gradle
@@ -14,6 +14,10 @@ repositories {
 }
 
 dependencies {
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.3.1.RELEASE'
+	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
+
+
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
