--- a/exams-react/package.json
+++ b/exams-react/package.json
@@ -15,6 +15,7 @@
     "react-focus-lock": "^2.4.1",
     "react-image": "^4.0.3",
     "react-scripts": "3.4.1",
+    "react-snackbar-alert": "^2.1.0",
     "styled-components": "^5.1.1",
     "sweetalert2": "^9.17.1"
   },
