--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.13.1",
     "react-focus-lock": "^2.4.1",
     "react-image": "^4.0.3",
+    "react-material-ui-form-validator": "^2.1.1",
     "react-router": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-snackbar-alert": "^2.1.0",
