--- a/Exam/build.gradle
+++ b/Exam/build.gradle
@@ -17,7 +17,7 @@ dependencies {
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.3.1.RELEASE'
 
 
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // doesn't work right now if this is present
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'mysql:mysql-connector-java'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
