--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
+    "@fullcalendar/bootstrap": "^5.3.0",
+    "@fullcalendar/common": "^5.2.0",
+    "@fullcalendar/core": "^5.3.0",
+    "@fullcalendar/daygrid": "^5.2.0",
+    "@fullcalendar/react": "^5.2.0",
+    "@fullcalendar/timegrid": "^5.2.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "date-fns": "^2.0.0-beta.5",
+    "bootstrap": "^4.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-focus-lock": "^2.4.1",
@@ -18,8 +25,10 @@
     "react-router": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-snackbar-alert": "^2.1.0",
+    "react-use": "^15.3.3",
     "styled-components": "^5.1.1",
-    "sweetalert2": "^9.17.1"
+    "sweetalert2": "^9.17.1",
+    "tslib": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
